Java: GptUi: rename GptStorage to InteractionStorage